test: decision tree and integrating survey results